--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,10 +34,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AplicacionCA
 excludes=
 file.reference.mysql-connector-j-9.1.0.jar=C:\\Users\\gerso\\OneDrive\\Desktop\\mysql-connector-j-9.1.0.jar
+file.reference.mysql-connector-j-9.1.0.jar-1=C:\\Users\\chech\\OneDrive\\Escritorio\\mysql-connector-j-9.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-9.1.0.jar}
+    ${file.reference.mysql-connector-j-9.1.0.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-j-9.1.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
